1brc: mmap, chunked - ~40 sec; fastest no unsafe (gonix) runs about 8~ seconds in local.